--- a/index.html
+++ b/index.html
@@ -207,13 +207,68 @@
                 </ul>
 
             </div><!-- notice -->
-
-
-
         </div><!-- container -->
 
+        <footer id="footer">
+            <!-- w100%  보더 탑 -->
+            <div class="foot_inner">
+                <!-- w1200 가운데정렬 -->
+
+                <ul class="foot_menu">
+                    <li><a href="#">회사소개</a></li>
+                    <li> | </li>
+                    <li><a href="#">이용약관</a></li>
+                    <li> | </li>
+                    <li><a href="#"><strong>개인정보처리방침</strong></a></li>
+                    <li> | </li>
+                    <li><a href="#">여행약관</a></li>
+                    <li> | </li>
+                    <li><a href="#">하나투어 닷컴</a></li>
+                </ul><!-- foot_menu -->
+
+                <p class="foot_tel"> ZEUSworld 전용 상담 &nbsp;&nbsp;&nbsp; 02-2127-1500 </p>
+
+                <ul class="hana">
+                    <li><strong>(주)하나투어</strong></li>
+                    <li> | </li>
+                    <li> 대표 : 송미선</li>
+                    <li> | </li>
+                    <li> 주소 : (03161) 서울특별시 종로구 인사동 5길 41</li>
+                </ul><!-- hana -->
+
+                <ul class="address">
+                    <li>사업자등록번호 : 102-81-39440</li>
+                    <li> | </li>
+                    <li><strong><u>사업자정보확인</u></strong></li>
+                    <li> | </li>
+                    <li>통신판매업신고번호 : 종로01-1806호 </li>
+                    <li> | </li>
+                    <li>관광사업자 등록번호 : 제1993-000006호</li>
+                </ul><!-- address -->
+
+                <ul class="data">
+                    <li>개인정보 보호책임자 : 전준형</li>
+                    <li> | </li>
+                    <li>영업보증보험 : 22억 1천만원 가입</li>
+                    <li> | </li>
+                    <li>팩스: 02-734-0392</li>
+                    <li> | </li>
+                    <li>이메일 : 15771233@hanatour.com</li>
+                    <li> | </li>
+                    <li> <img src="img/ico-callcenter.png" alt="ico-callcenter"> <strong>고객센터 1577-1233</strong></li>
+                </ul><!-- data -->
+
+                <p class="foot_p1">※ 부득이한 사정에 의해 여행일정이 변경되는 경우 사전 동의를 받습니다.</p>
+                <p class="foot_p2">※ 하나투어는 개별 항공권, 단품 및 일부 여행상품에 대하여 통신판매중개자로서 통신판매의 당사자가 아니며 해당상품의 거래정보 및 거래등에 대해 책임을 지지 않습니다.</p>
 
 
+                <p class="copy">COPYRIGHTⓒ HANATOUR SERVICE INC. ALL RIGHTS RESERVED</p>
+
+                <div class="f_logo">
+                    <img src="img/img_logo_virtuoso_pc.png" alt="virtuoso">
+                </div><!-- f_logo -->
+            </div><!-- foot_inner -->
+        </footer><!-- footer -->
     </div><!-- wrap -->
 </body>
 </html>
